# kometa-app

./: .prettierignore  AGENTS.md  docker-compose.yml  eslint.config.mjs  lingui.config.ts  package.json  pnpm-lock.yaml
.claude/: settings.local.json
apps/backend/: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  clear_db.py  pyproject.toml  requirements.txt  test_output.txt  test_task_endpoints.py  test_task_workflow.py  test_user_endpoints.py
apps/backend/config/: asgi.py  settings.py  urls.py
apps/backend/health/: tests.py  urls.py
apps/backend/kometa/: admin.py  apps.py  chat_realtime.py  consumers.py  models.py  routing.py  serializers.py  urls.py
apps/backend/kometa/migrations/: 0001_initial.py  0002_feedback.py  0003_task_completionrequest_taskresponse_and_more.py  0004_conversation_match.py  0005_conversationmessage.py  0006_user_blocked_at_user_blocked_reason_report.py  0007_task_structured_location.py  0008_task_location_city.py  0009_conversationreadstate.py  0010_user_credits.py
apps/backend/kometa/views/: auth.py  completion_requests.py  conversations.py  matches.py  my_responses.py  reports.py  task_responses.py  tasks.py  users.py
apps/backend/tests/: factories.py  helpers.py  test_auth.py  test_chat_consumer.py  test_conversation_unread.py  test_task_workflow.py  test_tasks.py  test_users.py
apps/mobile/: AGENTS.md
apps/web/: .env.example  AGENTS.md  package.json  pnpm-lock.yaml
apps/web/app/: globals.css  layout.tsx
docs/: api.md  concept.md  implementation-plan.md  route-mappings.md  tz.md  user-stories.md
(+98 files in other folders)
