[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asgiref==3.11.1",
    "django==6.0.4",
    "django-cors-headers>=4.9.0",
    "djangorestframework==3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "psycopg[binary]>=3.2.13",
    "sqlparse==0.5.5",
    "tzdata==2026.2",
]
